// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DownloadSummary renders download summary page 1`] = `
<div>
  <div
    class="DownloadSummary"
  >
    <div
      class="Header"
    >
      <div
        class="Titles"
      >
        <span
          class="Title"
        >
          DOWNLOAD SUMMARY
        </span>
        <span
          class="SubTitle"
        >
          Check the datasets you are going to download
        </span>
      </div>
      <div
        class="Buttons"
      >
        <button
          class="Button Secondary Small BackButton"
          data-testid="download-preview-back-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          Back to the map
        </button>
      </div>
    </div>
    <div
      class="Content"
    >
      <div
        class="Sidebar"
      >
        <div>
          Mock DownloadDataSummary
        </div>
      </div>
      <div
        class="Main"
      >
        <div
          class="MainContent"
        >
          <div
            class="MainContentHeader"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            <div>
              These are the datasets included in the download
            </div>
          </div>
          <div
            class="FormatPicker"
          >
            <div
              class="FormatPickerHeader"
            >
              <svg
                data-testid="svg-icon-mock"
              >
                mock-svg
              </svg>
              <div>
                Download Format
              </div>
            </div>
            <div
              class="FormatPickerContent"
            >
              <div>
                Mock Dropdown
              </div>
            </div>
          </div>
          <div
            class="TableContainer"
          >
            <div>
              Mock PrimeReactProvider 
              <div>
                Mock DataTable 
                <div>
                  Mock Column
                </div>
                <div>
                  Mock Column
                </div>
                <div>
                  Mock Column
                </div>
                <div>
                  Mock Column
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Footer"
        >
          <div
            class="TermsOfUse"
          >
            <div>
              Mock Checkbox
            </div>
            <label
              for="agree-to-terms-for-download"
            >
              I have read and agree to the platform’s
               
              <a
                href="https://soilhive.ag"
                rel="noreferrer"
                target="_blank"
              >
                Terms of use
              </a>
            </label>
          </div>
          <button
            class="Button Primary Medium DownloadButton"
            data-testid="sh-ui-button"
            disabled=""
            type="button"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Download data
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadSummary renders download summary page coming from availability 1`] = `
<div>
  <div
    class="DownloadSummary"
  >
    <div
      class="Header"
    >
      <div
        class="Titles"
      >
        <span
          class="Title"
        >
          DOWNLOAD SUMMARY
        </span>
        <span
          class="SubTitle"
        >
          Check the datasets you are going to download
        </span>
      </div>
      <div
        class="Buttons"
      >
        <button
          class="Button Secondary Small BackButton"
          data-testid="download-preview-back-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          Back to the map
        </button>
      </div>
    </div>
    <div
      class="Content"
    >
      <div
        class="Sidebar"
      >
        <div>
          Mock DownloadDataSummary
        </div>
      </div>
      <div
        class="Main"
      >
        <div
          class="MainContent"
        >
          <div
            class="MainContentHeader"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            <div>
              These are the datasets included in the download
            </div>
          </div>
          <div
            class="FormatPicker"
          >
            <div
              class="FormatPickerHeader"
            >
              <svg
                data-testid="svg-icon-mock"
              >
                mock-svg
              </svg>
              <div>
                Download Format
              </div>
            </div>
            <div
              class="FormatPickerContent"
            >
              <div>
                Mock Dropdown
              </div>
            </div>
          </div>
          <div
            class="TableContainer"
          >
            <div>
              Mock PrimeReactProvider 
              <div>
                Mock DataTable 
                <div>
                  Mock Column
                </div>
                <div>
                  Mock Column
                </div>
                <div>
                  Mock Column
                </div>
                <div>
                  Mock Column
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Footer"
        >
          <div
            class="TermsOfUse"
          >
            <div>
              Mock Checkbox
            </div>
            <label
              for="agree-to-terms-for-download"
            >
              I have read and agree to the platform’s
               
              <a
                href="https://soilhive.ag"
                rel="noreferrer"
                target="_blank"
              >
                Terms of use
              </a>
            </label>
          </div>
          <button
            class="Button Primary Medium DownloadButton"
            data-testid="sh-ui-button"
            disabled=""
            type="button"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Download data
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadSummary renders download summary page coming from data explorer 1`] = `
<div>
  <div
    class="DownloadSummary"
  >
    <div
      class="Header"
    >
      <div
        class="Titles"
      >
        <span
          class="Title"
        >
          DOWNLOAD SUMMARY
        </span>
        <span
          class="SubTitle"
        >
          Check the datasets you are going to download
        </span>
      </div>
      <div
        class="Buttons"
      >
        <button
          class="Button Secondary Small BackButton"
          data-testid="download-preview-back-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          Back to the data explorer
        </button>
      </div>
    </div>
    <div
      class="Content"
    >
      <div
        class="Sidebar"
      >
        <div>
          Mock DownloadDataSummary
        </div>
      </div>
      <div
        class="Main"
      >
        <div
          class="MainContent"
        >
          <div
            class="MainContentHeader"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            <div>
              These are the datasets included in the download
            </div>
          </div>
          <div
            class="FormatPicker"
          >
            <div
              class="FormatPickerHeader"
            >
              <svg
                data-testid="svg-icon-mock"
              >
                mock-svg
              </svg>
              <div>
                Download Format
              </div>
            </div>
            <div
              class="FormatPickerContent"
            >
              <div>
                Mock Dropdown
              </div>
            </div>
          </div>
          <div
            class="TableContainer"
          >
            <div>
              Mock PrimeReactProvider 
              <div>
                Mock DataTable 
                <div>
                  Mock Column
                </div>
                <div>
                  Mock Column
                </div>
                <div>
                  Mock Column
                </div>
                <div>
                  Mock Column
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Footer"
        >
          <div
            class="TermsOfUse"
          >
            <div>
              Mock Checkbox
            </div>
            <label
              for="agree-to-terms-for-download"
            >
              I have read and agree to the platform’s
               
              <a
                href="https://soilhive.ag"
                rel="noreferrer"
                target="_blank"
              >
                Terms of use
              </a>
            </label>
          </div>
          <button
            class="Button Primary Medium DownloadButton"
            data-testid="sh-ui-button"
            disabled=""
            type="button"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Download data
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
